--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Resume</title>
+    <!-- Summary -->
+    <section></section>
+    <!-- Education -->
+    <section></section>
+    <!-- Work Experience -->
+    <section></section>
+    <!-- Skills -->
+    <section></section>
+    <!-- Achievement -->
+    <section></section>
+    <!--  Certification-->
+    <section></section>
   </head>
   <body></body>
 </html>
